# Bastion

./: .dockerignore  .env.example  .gitignore  Bastion_BuildPlan.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MILESTONE-ROADMAP.md  OPENCLAW_PLUGIN_PLAN.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  openclaw-plugin-ci.yml  publish-openclaw-plugin.yml  publish-sdk-node.yml  publish-sdk-python.yml
bastion/: __init__.py  paths.py  sdk.py
bastion/adapters/: claude_agent_sdk.py  openai_agents.py
bastion/audit/: chain.py  signer.py  store.py  verifier.py
bastion/cli/: __init__.py  init.py  report.py  verify.py  watch.py
bastion/hitl/: __init__.py  cli_prompt.py
bastion/policy/: __init__.py  code_policy.py  engine.py  llm_judge.py  nl_policy.py  schema.py
docs/: EXPERIMENTS.md  PRESENTATION.md
examples/: demo_agent.py  openai_sketch.py  run_demo.py
tests/: conftest.py  test_audit_chain.py  test_claude_adapter.py  test_code_policy.py  test_dashboard.py  test_engine.py  test_hitl.py  test_nl_policy.py  test_openai_adapter.py  test_paths.py  test_report.py  test_sdk_api.py  test_signer.py
