[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "bastion-sdk"
version = "0.1.0"
description = "Trust layer for AI agents: policy enforcement, HITL, and signed audit chain."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Matthieu Hakim", email = "matthieuhakim@gmail.com" }]
keywords = ["ai", "agents", "policy", "audit", "security", "hitl", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.60",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
bastion = "bastion.cli:main"

[project.urls]
Homepage = "https://github.com/Matthieuhakim/Bastion"
Repository = "https://github.com/Matthieuhakim/Bastion"
Issues = "https://github.com/Matthieuhakim/Bastion/issues"

[tool.hatch.build.targets.wheel]
packages = ["bastion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "llm: tests that hit the Anthropic API (skip with `pytest -m 'not llm'`)",
    "integration: tests that require external systems (e.g. Claude Agent SDK runtime)",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
